package IM.Server;
import "IM.BaseDefine.proto";

message IMValidateReq{
	required string user_name = 1;
	required string password = 2;
}

message IMValidateRsp{
	required string user_name = 1;
	required uint32 result_code = 2;
	optional string result_string = 3;
	optional IM.BaseDefine.UserInfo user_info = 4;
}
